--- a/terraform/gcp/.env.example
+++ b/terraform/gcp/.env.example
@@ -468,7 +468,7 @@ AZURE_BLOB_ACCOUNT_URL=https://<your_account_name>.blob.core.windows.net
 # Google Storage Configuration
 #
 GOOGLE_STORAGE_BUCKET_NAME=${gcs_bucket_name}
-GOOGLE_STORAGE_SERVICE_ACCOUNT_JSON_BASE64=${google_storage_service_account_json_base64}
+GOOGLE_STORAGE_SERVICE_ACCOUNT_JSON_BASE64='${google_storage_service_account_json_base64}'
 
 # The Alibaba Cloud OSS configurations,
 #
