feat: add redis
Signed-off-by: Yoshio Sugiyama <nenegi.01mo@gmail.com>

--- a/terraform/gcp/.env.example
+++ b/terraform/gcp/.env.example
@@ -331,10 +331,10 @@ MYSQL_INNODB_FLUSH_LOG_AT_TRX_COMMIT=2
 # This Redis configuration is used for caching and for pub/sub during conversation.
 # ------------------------------
 
-REDIS_HOST=redis
+REDIS_HOST=${redis_host}
 REDIS_PORT=6379
 REDIS_USERNAME=
-REDIS_PASSWORD=difyai123456
+REDIS_PASSWORD='${redis_auth_string}'
 REDIS_USE_SSL=false
 # SSL configuration for Redis (when REDIS_USE_SSL=true)
 REDIS_SSL_CERT_REQS=CERT_NONE
