--- a/terraform/gcp/.env.example
+++ b/terraform/gcp/.env.example
@@ -375,14 +375,14 @@ REDIS_CLUSTERS_PASSWORD=
 # If use Redis Sentinel, format as follows: `sentinel://<redis_username>:<redis_password>@<sentinel_host1>:<sentinel_port>/<redis_database>`
 # For high availability, you can configure multiple Sentinel nodes (if provided) separated by semicolons like below example:
 # Example: sentinel://:difyai123456@localhost:26379/1;sentinel://:difyai12345@localhost:26379/1;sentinel://:difyai12345@localhost:26379/1
-CELERY_BROKER_URL=redis://:difyai123456@redis:6379/1
+CELERY_BROKER_URL='redis://:${redis_auth_string}@${redis_host}:6379/1'
 CELERY_BACKEND=redis
 BROKER_USE_SSL=false
 
 # If you are using Redis Sentinel for high availability, configure the following settings.
 CELERY_USE_SENTINEL=false
 CELERY_SENTINEL_MASTER_NAME=
-CELERY_SENTINEL_PASSWORD=
+CELERY_SENTINEL_PASSWORD='${redis_auth_string}'
 CELERY_SENTINEL_SOCKET_TIMEOUT=0.1
 
 # ------------------------------
@@ -468,7 +468,7 @@ AZURE_BLOB_ACCOUNT_URL=https://<your_account_name>.blob.core.windows.net
 # Google Storage Configuration
 #
 GOOGLE_STORAGE_BUCKET_NAME=${gcs_bucket_name}
-GOOGLE_STORAGE_SERVICE_ACCOUNT_JSON_BASE64='${google_storage_service_account_json_base64}'
+GOOGLE_STORAGE_SERVICE_ACCOUNT_JSON_BASE64=${google_storage_service_account_json_base64}
 
 # The Alibaba Cloud OSS configurations,
 #
